--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Arnaud Buchholz <arnaud.buchholz@free.fr>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/ArnaudBuchholz/training-npm-publish"
+  }
 }
