--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,4 +21,6 @@ jobs:
       # Ensure npm 11.5.1 or later is installed
       - name: Update npm
         run: npm install -g npm@latest
-      - run: npm publish --access public
+      - run: npm install
+      # - run: npm publish --access public
+      - run: npm run semantic-release
