--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,8 +4,13 @@ on:
   workflow_dispatch:
 
 permissions:
-  id-token: write  # Required for OIDC
-  contents: read
+  # Required for OIDC
+  id-token: write
+  # For semantic-release
+  actions: read
+  contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
   publish:
