--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Experiment on NPM publishing",
   "main": "index.js",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "scripts": {
     "semantic-release": "semantic-release"
