--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,4 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: npm publish --access public
+      # - run: npm publish --access public
